2001-08-23  John Harper  <jsh@pixelslut.com>

	* widgets/match-window.jl (make-match-window:matchers): search
	the translated X properties for the real atom name when
	grabbing properties, don't pass the (translated) property name

2001-07-02  John Harper  <jsh@pixelslut.com>

	* version 0.99

2001-04-20  John Harper  <jsh@eazel.com>

	Extra i18n work. Adapted from a patch by Vlad Harchev
	<hvv@hippo.ru>

	* layouts/keymaps.jl (beautify-keymap-name): try to localize
	the name before returning it
	* widgets/keymap.jl (beautify-symbol-name): ditto
	* widgets/match-window.jl (beautify-symbol-name): ditto

	* widgets/match-window.jl (make-match-window:matchers):
	localizes all property names before starting, then uses that
	list of properties

2001-02-13  John Harper  <jsh@eazel.com>

	* version 0.37

2001-02-07  John Harper  <jsh@eazel.com>

	* widgets/event.jl (make-event-item): strip leading and
	trailing white space from the event name in the `ref' method

2001-01-27  John Harper  <jsh@eazel.com>

	* shell.jl (display-flattened-group): translate the real name
	of the group before making it the title of the notebook page

2001-01-05  John Harper  <jsh@eazel.com>

	* version 0.35

2000-12-18  John Harper  <jsh@eazel.com>

	* widgets/modifier-list.jl (validp): don't allow () as a valid
	modifier list

2000-12-04  John Harper  <jsh@eazel.com>

	* version 0.34

2000-11-28  John Harper  <jsh@eazel.com>

	* widgets/modifier-list.jl: new widget, manages a list of
	modifier key names

	* layouts/keymaps.jl: only put slots whose names end in
	`-keymap' into the popup menu, just stack any others in the
	vbox

	* shell.jl (display-flattened): if the layout widget is a
	container, give it a non-zero border-width

2000-11-27  John Harper  <jsh@eazel.com>

	* widgets/frame-style.jl (make-frame-style-item): reversed
	order of combo box and label; don't set usize of text box

	* layout.jl: renamed `expand' flag as `expand-vertically';