@@ -1,3 +1,12 @@
+2001-09-07  John Harper  <jsh@pixelslut.com>
+
+	* layouts/keymaps.jl (layout-keymaps): fixed bug of keymap
+	popup menu being displayed even if there are no keymaps to
+	configure
+
+	* shell.jl (display-flattened): fixed bug of `--flatten
+	--single-level' combination not working properly
+
 2001-08-23  John Harper  <jsh@pixelslut.com>
 
 	* widgets/match-window.jl (make-match-window:matchers): search
